ppp text format

--- a/data/projects.json
+++ b/data/projects.json
@@ -9,23 +9,22 @@
   "<br><br><strong>My role</strong><br>As Head of Design for BuildingMinds' App Factory, I led EQCapture as part of a core three-person team. I owned end-to-end design: field research with surveyors in Hamburg and Frankfurt, UX/UI and design system work, usability testing and stakeholder presentations, while mentoring the Product Manager in user-centred methods.",
 
   "<br><br><strong>Project goals</strong><br>",
-  "1. Replace fragmented paper, photo and Excel workflows with a single mobile app connected to the BuildingMinds platform.<br>",
-  "2. Reduce time and errors when capturing large volumes of equipment data across multi-floor buildings.<br>",
-  "3. Keep clear spatial context (building, floor, room) for every asset to support a reliable digital twin.<br>",
-  "4. Make surveyors' on-site work smoother by cutting repetitive typing and tedious post-processing.<br>",
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Replace fragmented paper, photo and Excel workflows with a single mobile app connected to the BuildingMinds platform.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Reduce time and errors when capturing large volumes of equipment data across multi-floor buildings.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Keep clear spatial context (building, floor, room) for every asset to support a reliable digital twin.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Make surveyors' on-site work smoother by cutting repetitive typing and tedious post-processing.</span><br>",
 
   "<br><br><strong>Plan and process</strong><br>",
-  "1. Discovery: Map the existing survey workflow end to end and shadow surveyors on real projects to uncover pain points and edge cases.<br>",
-  "2. Definition: Prioritise breaks in the process (lost context between photos and equipment, manual re-typing, lack of tracking) and turn them into core MVP flows.<br>",
-  "3. Design: Create task-focused journeys for selecting building → floor → space, capturing records, attaching photos and filtering via DIN-based equipment structures.<br>",
-  "4. Validation: Prototype key flows, test with surveyors using both paper and interactive prototypes, and iterate on speed, clarity and error handling.<br>",
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Discovery: Map the existing survey workflow end to end and shadow surveyors on real projects to uncover pain points and edge cases.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Definition: Prioritise breaks in the process (lost context between photos and equipment, manual re-typing, lack of tracking) and turn them into core MVP flows.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Design: Create task-focused journeys for selecting building → floor → space, capturing records, attaching photos and filtering via DIN-based equipment structures.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Validation: Prototype key flows, test with surveyors using both paper and interactive prototypes, and iterate on speed, clarity and error handling.</span><br>",
 
   "<br><br><strong>Achievements and outcomes</strong><br>",
-  "1. Designed an end-to-end mobile capture journey that connects on-site work directly with the BuildingMinds digital twin, replacing several disconnected tools with one focused app.<br>",
-  "2. Built a reusable mobile UI library aligned with the BuildingMinds design system, laying groundwork for future App Factory apps to share patterns and components.<br>",
-  "3. Achieved a concept that field feedback indicates can cut per-equipment capture time by up to around five times for typical assets, while improving visibility into survey progress across buildings and floors.<br>"
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Designed an end-to-end mobile capture journey that connects on-site work directly with the BuildingMinds digital twin, replacing several disconnected tools with one focused app.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Built a reusable mobile UI library aligned with the BuildingMinds design system, laying groundwork for future App Factory apps to share patterns and components.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Achieved a concept that field feedback indicates can cut per-equipment capture time by up to around five times for typical assets, while improving visibility into survey progress across buildings and floors.</span><br>"
 ],
-
     "link": "project.php?id=EQCapture",
     "title_bold": "🔒 EQCapture",
     "title_regular": "inventory tracking",
@@ -44,37 +43,37 @@
     "desc": [
   "<strong>A Better Search</strong> reimagines how users find process content inside the Signavio (now SAP Signavio) Process Collaboration Hub, turning a technically powerful but hard-to-use search into an experience that everyday business users can actually rely on to navigate large, complex workspaces.",
   
-  "<br><br><strong>My role</strong><br>I led the UX work on the “A Better Search” initiative for the Process Collaboration Hub, working end-to-end from research through interaction design and stakeholder alignment. I combined search log analysis, usability tests and interviews with customer-facing teams to understand how people really tried to find process models, dictionary items and documents across large, messy tenants, and translated those insights into concrete UX requirements for both simple and advanced search.",
+  "<br><br><strong>My role</strong><br>I led the UX work on the initiative for the Process Collaboration Hub, working end-to-end from research through interaction design and stakeholder alignment. I combined search log analysis, usability tests and interviews with customer-facing teams to understand how people really tried to find process models, dictionary items and documents across large, messy tenants, and translated those insights into concrete UX requirements for both simple and advanced search.",
 
   "<br><br><strong>Project goals</strong><br>",
-  "1. Make it dramatically easier for business users to find the right process models, dictionary items and documents across very large tenants, so the Hub becomes their natural starting point.<br>",
-  "2. Transform search from a title-only, expert feature into an intuitive, Google-like experience with suggestions, meaningful refinement and guidance instead of hidden query tricks.<br>",
-  "3. Reduce time wasted scanning long, unstructured result lists by improving filtering, visual hierarchy and feedback, so users can move from hundreds of hits to a small, relevant set in just a few steps.<br>",
-  "4. Create reusable search and filtering patterns (criteria tags, saved searches, attribute refinement) that other parts of the Signavio suite can adopt wherever users work with large process datasets.",
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Make it dramatically easier for business users to find the right process models, dictionary items and documents across very large tenants, so the Hub becomes their natural starting point.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Transform search from a title-only, expert feature into an intuitive, Google-like experience with suggestions, meaningful refinement and guidance instead of hidden query tricks.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Reduce time wasted scanning long, unstructured result lists by improving filtering, visual hierarchy and feedback, so users can move from hundreds of hits to a small, relevant set in just a few steps.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Create reusable search and filtering patterns (criteria tags, saved searches, attribute refinement) that other parts of the Signavio suite can adopt wherever users work with large process datasets.</span><br>",
 
   "<br><br><strong>Plan and process</strong><br>",
-  "1. Empathise: Ran usability tests on the existing search experience, collected questionnaires, and spoke with customer support, product and customer-facing teams to surface recurring search pain points and expectations.<br>",
-  "2. Discover: Analysed Hub search data (such as volume of searches and queries with no results) and mapped how users moved between search, folders and smart folders to understand where they got stuck or gave up.<br>",
-  "3. Ideate: Benchmarked search and refinement patterns from tools like Jira, LinkedIn, job boards and e‑commerce sites, then adapted those paradigms to Signavio’s attribute-rich process content and metadata model.<br>",
-  "4. Validate: Tested early flows and interaction patterns for simple and advanced search with users, iterating on filter discoverability, criteria tags and result layouts based on observed confusion, errors and edge cases.",
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Empathise: Ran usability tests on the existing search experience, collected questionnaires, and spoke with customer support, product and customer-facing teams to surface recurring search pain points and expectations.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Discover: Analysed Hub search data (such as volume of searches and queries with no results) and mapped how users moved between search, folders and smart folders to understand where they got stuck or gave up.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Ideate: Benchmarked search and refinement patterns from tools like Jira, LinkedIn, job boards and e‑commerce sites, then adapted those paradigms to Signavio's attribute-rich process content and metadata model.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Validate: Tested early flows and interaction patterns for simple and advanced search with users, iterating on filter discoverability, criteria tags and result layouts based on observed confusion, errors and edge cases.</span><br>",
 
   "<br><br><strong>Problems we found</strong><br>",
-  "1. Simple search behaved like a bare-bones title lookup with no suggestions, autocomplete or recent searches, falling far short of the forgiving, modern behaviour users expected from search.<br>",
-  "2. Advanced search was powerful but almost unusable: attribute lists were extremely long and unclear, type controls were nearly invisible, there was no way to filter by date, and error feedback was weak or missing.<br>",
-  "3. Result lists were hard to scan and act on, with no grouping or secondary filters, unclear type icons and a flat visual structure that made it difficult to decide which item to open next.<br>",
-  "4. Users had no easy way to progressively refine very large result sets, even though many tenants contained hundreds or thousands of items matching broad queries.",
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Simple search behaved like a bare-bones title lookup with no suggestions, autocomplete or recent searches, falling far short of the forgiving, modern behaviour users expected from search.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Advanced search was powerful but almost unusable: attribute lists were extremely long and unclear, type controls were nearly invisible, there was no way to filter by date, and error feedback was weak or missing.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Result lists were hard to scan and act on, with no grouping or secondary filters, unclear type icons and a flat visual structure that made it difficult to decide which item to open next.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Users had no easy way to progressively refine very large result sets, even though many tenants contained hundreds or thousands of items matching broad queries.</span><br>",
 
   "<br><br><strong>Key design decisions</strong><br>",
-  "1. Reframed the core user story around refining results (“I want to narrow down my initial search results so I can find the right model faster”), making refinement the centre of the experience rather than an afterthought.<br>",
-  "2. Introduced a criteria-tag pattern for advanced search, where each filter (for example customer, status, IT system or date) becomes a visible, editable chip that users can add, remove and reorder with clear state and feedback.<br>",
-  "3. Curated and clarified attributes by surfacing frequently used filters first, shortening long attribute lists and improving naming so non-expert users could better understand what each filter would do.<br>",
-  "4. Restructured the results layout with stronger hierarchy for type, title, key metadata and recency, and laid the groundwork for sorting and grouping so users could scan and prioritise results much more quickly.",
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Reframed the core user story around refining results (\"I want to narrow down my initial search results so I can find the right model faster\"), making refinement the centre of the experience rather than an afterthought.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Introduced a criteria-tag pattern for advanced search, where each filter (for example customer, status, IT system or date) becomes a visible, editable chip that users can add, remove and reorder with clear state and feedback.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Curated and clarified attributes by surfacing frequently used filters first, shortening long attribute lists and improving naming so non-expert users could better understand what each filter would do.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Restructured the results layout with stronger hierarchy for type, title, key metadata and recency, and laid the groundwork for sorting and grouping so users could scan and prioritise results much more quickly.</span><br>",
 
   "<br><br><strong>Achievements and outcomes</strong><br>",
-  "1. Turned a title-only, expert-oriented search into an approachable, guided experience that better matched expectations from modern SaaS tools while still supporting Signavio’s rich attribute model.<br>",
-  "2. Enabled users to refine result sets of hundreds of items down to focused subsets in just a few refinement steps, directly supporting real-world tasks like finding the right process, dictionary item or incident documentation.<br>",
-  "3. Strengthened the Process Collaboration Hub as the central place to discover and reuse process knowledge, making it more likely that business users stay within the Signavio ecosystem instead of reverting to local files.<br>",
-  "4. Delivered reusable patterns for advanced filtering, criteria tags and saved searches that other parts of the SAP Signavio suite can adopt wherever users need to work efficiently with large collections of process artefacts."
+  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Turned a title-only, expert-oriented search into an approachable, guided experience that better matched expectations from modern SaaS tools while still supporting Signavio's rich attribute model.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Enabled users to refine result sets of hundreds of items down to focused subsets in just a few refinement steps, directly supporting real-world tasks like finding the right process, dictionary item or incident documentation.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Strengthened the Process Collaboration Hub as the central place to discover and reuse process knowledge, making it more likely that business users stay within the Signavio ecosystem instead of reverting to local files.</span><br>",
+  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Delivered reusable patterns for advanced filtering, criteria tags and saved searches that other parts of the SAP Signavio suite can adopt wherever users need to work efficiently with large collections of process artefacts.</span><br>"
 ],
     "link": "project.php?id=search",
     "title_bold": "🔒 Search",
