pp text json update

--- a/data/projects.json
+++ b/data/projects.json
@@ -4,26 +4,32 @@
 	  "gallery_desc": "A mobile app to capture equipmant on premise",
     "shortdesc": "shortdescription",
 "desc": [
-  "<strong>EQCapture</strong> is a mobile app that replaces paper, photos and spreadsheets with a single workflow for on-site equipment surveys in large commercial buildings. It guides surveyors through complex properties, captures equipment details in context and syncs everything directly into the BuildingMinds digital twin.",
+  "<p><strong>EQCapture</strong> is a mobile app that replaces paper, photos and spreadsheets with a single workflow for on-site equipment surveys in large commercial buildings. It guides surveyors through complex properties, captures equipment details in context and syncs everything directly into the BuildingMinds digital twin.</p>",
 
-  "<br><br><strong>My role</strong><br>As Head of Design for BuildingMinds' App Factory, I led EQCapture as part of a core three-person team. I owned end-to-end design: field research with surveyors in Hamburg and Frankfurt, UX/UI and design system work, usability testing and stakeholder presentations, while mentoring the Product Manager in user-centred methods.",
+  "<p><strong class=\"section-label\">My role</strong><br>As Head of Design for BuildingMinds' App Factory, I led EQCapture as part of a core three-person team. I owned end-to-end design: field research with surveyors in Hamburg and Frankfurt, UX/UI and design system work, usability testing and stakeholder presentations, while mentoring the Product Manager in user-centred methods.</p>",
 
-  "<br><br><strong>Project goals</strong><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Replace fragmented paper, photo and Excel workflows with a single mobile app connected to the BuildingMinds platform.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Reduce time and errors when capturing large volumes of equipment data across multi-floor buildings.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Keep clear spatial context (building, floor, room) for every asset to support a reliable digital twin.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Make surveyors' on-site work smoother by cutting repetitive typing and tedious post-processing.</span><br>",
+  "<p><strong class=\"section-label\">Project goals</strong></p>",
+  "<ol>",
+    "<li>Replace fragmented paper, photo and Excel workflows with a single mobile app connected to the BuildingMinds platform.</li>",
+    "<li>Reduce time and errors when capturing large volumes of equipment data across multi-floor buildings.</li>",
+    "<li>Keep clear spatial context (building, floor, room) for every asset to support a reliable digital twin.</li>",
+    "<li>Make surveyors' on-site work smoother by cutting repetitive typing and tedious post-processing.</li>",
+  "</ol>",
 
-  "<br><br><strong>Plan and process</strong><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Discovery: Map the existing survey workflow end to end and shadow surveyors on real projects to uncover pain points and edge cases.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Definition: Prioritise breaks in the process (lost context between photos and equipment, manual re-typing, lack of tracking) and turn them into core MVP flows.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Design: Create task-focused journeys for selecting building → floor → space, capturing records, attaching photos and filtering via DIN-based equipment structures.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">4.</span> Validation: Prototype key flows, test with surveyors using both paper and interactive prototypes, and iterate on speed, clarity and error handling.</span><br>",
+  "<p><strong class=\"section-label\">Plan and process</strong></p>",
+  "<ol>",
+    "<li>Discovery: Map the existing survey workflow end to end and shadow surveyors on real projects to uncover pain points and edge cases.</li>",
+    "<li>Definition: Prioritise breaks in the process (lost context between photos and equipment, manual re-typing, lack of tracking) and turn them into core MVP flows.</li>",
+    "<li>Design: Create task-focused journeys for selecting building → floor → space, capturing records, attaching photos and filtering via DIN-based equipment structures.</li>",
+    "<li>Validation: Prototype key flows, test with surveyors using both paper and interactive prototypes, and iterate on speed, clarity and error handling.</li>",
+  "</ol>",
 
-  "<br><br><strong>Achievements and outcomes</strong><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">1.</span> Designed an end-to-end mobile capture journey that connects on-site work directly with the BuildingMinds digital twin, replacing several disconnected tools with one focused app.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">2.</span> Built a reusable mobile UI library aligned with the BuildingMinds design system, laying groundwork for future App Factory apps to share patterns and components.</span><br>",
-  "<span class=\"numbered-line\"><span class=\"num\">3.</span> Achieved a concept that field feedback indicates can cut per-equipment capture time by up to around five times for typical assets, while improving visibility into survey progress across buildings and floors.</span><br>"
+  "<p><strong class=\"section-label\">Achievements and outcomes</strong></p>",
+  "<ol>",
+    "<li>Designed an end-to-end mobile capture journey that connects on-site work directly with the BuildingMinds digital twin, replacing several disconnected tools with one focused app.</li>",
+    "<li>Built a reusable mobile UI library aligned with the BuildingMinds design system, laying groundwork for future App Factory apps to share patterns and components.</li>",
+    "<li>Achieved a concept that field feedback indicates can cut per-equipment capture time by up to around five times for typical assets, while improving visibility into survey progress across buildings and floors.</li>",
+  "</ol>"
 ],
     "link": "project.php?id=EQCapture",
     "title_bold": "🔒 EQCapture",
